# image-deid-etl

./: .env.sample  .gitignore  CONTRIBUTING.md  NOTICE  README.md  all_orthanc_study_uuids_new.json  all_orthanc_study_uuids_testing.json  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  flake.nix  image_deid_etl  orthanc_study_uuids.json  requirements.txt  run_orthanc_data_all_studies_testing.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: continuous_integration.yml  continuous_integration_manual.yml
deployment/: Dockerfile  README.md
deployment/terraform/: .gitignore  .terraform.lock.hcl  alarms.tf  batch.tf  config.tf  cw_eb.tf  database.tf  dns.tf  firewall.tf  iam.tf  network.tf  sfn.tf  storage.tf  variables.tf  versions.tf
deployment/terraform/job-definitions/: image-deid-etl.json.tmpl
deployment/terraform/step-functions/: image-deid-etl.json.tmpl
doc/: TUNNELING_TO_RDS_WITH_SSH.md
etl/: custom_dicom.py  custom_etl.py  custom_flywheel.py  database.py  external_data_handling.py  images_no_save.py  main_pipeline.py  orthanc.py
scripts/: cibuild  cipublish  console  infra  test  update
src/image_deid_etl/: .dockerignore  Dockerfile  MANIFEST.in  requirements.txt  setup.cfg
src/image_deid_etl/image_deid_etl/: __main__.py  custom_dicom.py  custom_etl.py  custom_flywheel.py  database.py  diagnosis_mapping.json  external_data_handling.py  images.py  main_pipeline.py  orthanc.py  pandas_fns.py
