[metadata]
name = image-deid-etl
version = 0.1.0
description = TBD.
long_description = file: README.md
url = https://github.com/d3b-center/image-deid-etl

[options]
packages = find:
python_requires = >=3.9,<3.10
install_requires =
    flywheel-sdk
    nibabel
    numpy
    opencv-python-headless
    pandas
    pillow
    psycopg2
    pydicom
    python-magic
    requests
    SQLAlchemy
    urllib3
    boto3

[options.entry_points]
console_scripts =
    image-deid-etl = image_deid_etl.__main__:main
